<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TableRow
                android:id="@+id/tableRow1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="300dp"
                    android:layout_height="80dp"
                    android:gravity="center"
                    android:text="@string/try_to_guess"
                    android:textSize="18sp" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/editText1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:textSize="18sp"
                    tools:ignore="LabelFor" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/button1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/input_value"
                    tools:ignore="UsingOnClickInXml" />
            </TableRow>
        </TableLayout>

        <TableLayout
            android:layout_width="363dp"
            android:layout_height="132dp"
            android:gravity="center"
            android:translationY="200dp">

            <TableRow
                android:id="@+id/table2Row1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center">

                <Button
                    android:id="@+id/lvl_button1"
                    android:layout_width="170dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:text="@string/lvl1" />

                <Button
                    android:id="@+id/lvl_button2"
                    android:layout_width="170dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:text="@string/lvl2" />
            </TableRow>

            <TableRow
                android:id="@+id/table2Row2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center">

                <Button
                    android:id="@+id/exit_button"
                    android:layout_width="170dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:text="@string/exit" />
            </TableRow>
        </TableLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>